@@ -79,18 +79,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-   * mod_proxy_http: Correctly parse all Connection headers in proxy.
-     PR 43509
-     trunk: http://svn.apache.org/viewvc?view=rev&revision=580457
-     2.2.x: http://people.apache.org/~niq/43509.patch
-     +1: niq, rpluem
-     niq: changed the name.  Resisted temptation to use "pooltabletime".
-     rpluem says: Revision of name change is r581030.
-     -1: jim. r580457 and r581030 conflict. Likely because of
-              r580782
-     niq: separate 2.2.x patch fixes jim's objection
-     +1: jim
-
    * mod_proxy_http: Remove Warning headers with wrong date
      PR 16138
      trunk: http://svn.apache.org/viewvc?view=rev&revision=580782
